--- a/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/Base.lproj/Main.storyboard
@@ -120,6 +120,21 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="571.5" width="374" height="246.5"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zVc-CR-4Kp">
+                                                <rect key="frame" x="0.0" y="120.5" width="374" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="R07-sR-m1A"/>
+                                                </constraints>
+                                                <color key="progressTintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="trackTintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="zVc-CR-4Kp" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" id="3qD-rS-ggL"/>
+                                            <constraint firstItem="zVc-CR-4Kp" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="7GV-nZ-fdk"/>
+                                            <constraint firstAttribute="trailing" secondItem="zVc-CR-4Kp" secondAttribute="trailing" id="frP-Bg-HUS"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -134,6 +149,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="progressBar" destination="7GV-nZ-fdk" id="CjQ-ZA-6Tx"/>
+                        <outlet property="progressView" destination="zVc-CR-4Kp" id="saC-6o-49v"/>
                         <outlet property="titleLabel" destination="XLm-5r-pSP" id="hlp-Xn-Dco"/>
                     </connections>
                 </viewController>
